Move Fragment to new class and populated list view with dummy data using ArrayAdapter parent class

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,7 +14,9 @@
         android:id="@+id/artist_search_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="#D119FF"/>
+        android:textColorHint="#D119FF"
+        android:singleLine="true"
+        android:hint="@string/search_hint"/>
 
     <ListView
         android:layout_width="match_parent"
