--- a/app/src/main/res/layout/result_list_item.xml
+++ b/app/src/main/res/layout/result_list_item.xml
@@ -2,20 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/image_list_result"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"/>
     </FrameLayout>
+
     <TextView
-        android:id="@+id/name_artist_id"
-        android:layout_width="fill_parent"
+        android:id="@+id/name_artist_textview"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
-        android:textAppearance="?android:textAppearanceLarge"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:gravity="center_vertical"
         android:textColor="#D119FF"/>
 </LinearLayout>
