--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,8 @@
 
     <EditText
         android:id="@+id/artist_search_text"
+        android:inputType="text"
+        android:imeOptions="actionSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColorHint="#D119FF"
