--- a/app/src/main/res/layout/result_list_item.xml
+++ b/app/src/main/res/layout/result_list_item.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="8dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <FrameLayout
+    <ImageView
+        android:id="@+id/image_list_result"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/image_list_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"/>
-    </FrameLayout>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"/>
 
     <TextView
         android:id="@+id/name_artist_textview"
+        android:paddingStart="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
         android:textAppearance="?android:textAppearanceSmall"
-        android:gravity="center_vertical"
-        android:textColor="#D119FF"/>
+        android:layout_gravity="center_vertical"
+        android:textColor="#003366"/>
 </LinearLayout>
